# ChangeLog for dev-libs/apr
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr/ChangeLog,v 1.101 2008/01/28 23:53:34 hollow Exp $

  28 Jan 2008; Benedikt Böhm <hollow@gentoo.org>
  -files/apr-0.9.12-linking.patch, -apr-0.9.12.ebuild, -apr-0.9.13.ebuild:
  remove apr-0 wrt #203578

*apr-1.2.12 (15 Dec 2007)

  15 Dec 2007; Benedikt Böhm <hollow@gentoo.org> -apr-1.2.8.ebuild,
  -apr-1.2.9.ebuild, +apr-1.2.12.ebuild:
  version bump; #200947

  16 Nov 2007; nixnut <nixnut@gentoo.org> apr-1.2.11.ebuild:
  Stable on ppc wrt bug 198866

  16 Nov 2007; Raúl Porcel <armin76@gentoo.org> apr-1.2.11.ebuild:
  alpha/ia64 stable wrt #198866

  15 Nov 2007; Steve Dibb <beandog@gentoo.org> apr-1.2.11.ebuild:
  amd64 stable, bug 198866

  13 Nov 2007; Dawid Węgliński <cla@gentoo.org> apr-1.2.11.ebuild:
  Stable on x86 (bug #198866)

  13 Nov 2007; Markus Rothe <corsair@gentoo.org> apr-1.2.11.ebuild:
  Stable on ppc64; bug #198866

  13 Nov 2007; Jeroen Roovers <jer@gentoo.org> apr-1.2.11.ebuild:
  Stable for HPPA (bug #198866).

  12 Nov 2007; Ferris McCormick <fmccor@gentoo.org> apr-1.2.11.ebuild:
  Sparc stable --- Bug #198866 --- Good for two months.

  09 Sep 2007; Benedikt Böhm <hollow@gentoo.org> apr-1.2.11.ebuild:
  fix #188485

*apr-1.2.11 (08 Sep 2007)

  08 Sep 2007; Benedikt Böhm <hollow@gentoo.org> +apr-1.2.11.ebuild:
  version bump; #191733

  31 Jul 2007; Christian Heim <phreak@gentoo.org> apr-1.2.9.ebuild:
  The version bump wasn't designed to go straight to stable.

*apr-1.2.9 (30 Jul 2007)

  30 Jul 2007; Benedikt Böhm <hollow@gentoo.org> +apr-1.2.9.ebuild:
  version bump

  27 Jun 2007; Lars Weiler <pylon@gentoo.org> apr-1.2.8.ebuild:
  Stable on ppc; bug #178264.

  27 Jun 2007; Jeroen Roovers <jer@gentoo.org> apr-1.2.8.ebuild:
  Stable for HPPA (bug #178264).

  15 Jun 2007; Raúl Porcel <armin76@gentoo.org> apr-1.2.8.ebuild:
  alpha stable wrt #178264
